# FlashDownUP

./: CONTRIBUTORS.md  README.md  pyproject.toml
examples/: compare_methods.py  dual_branch_comparison.py  dwt_haar_demo.py  s2d_stem.py
flashdownup/: __init__.py  analytics.py  cli.py  core.py  registry.py  utils.py
flashdownup/ops/: __init__.py  fractional.py  lossless.py  lossy.py
tests/: test_comprehensive.py  test_fractional.py  test_ops.py
